// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.participant.admin.v0;

import "google/protobuf/empty.proto";

service ResourceManagementService {
  // Update resource limits.
  // Only supported if the server runs Canton enterprise.
  rpc UpdateResourceLimits(ResourceLimits) returns (google.protobuf.Empty);

  // Get the current resource limits.
  rpc GetResourceLimits(google.protobuf.Empty) returns (ResourceLimits);
}

message ResourceLimits {
  // The maximum number of dirty requests.
  // A negative value indicates that there is no limit.
  int32 max_dirty_requests = 1;

  // The maximum rate of command submissions through the ledger api.
  // A negative value indicates that there is no limit.
  int32 max_rate = 2;

  // The maximum burst acceptable (factor > 0) before
  // steady state throtteling kicks in.
  double max_burst_factor = 3;
}
